# pickapic

./: Makefile  README.md  pyproject.toml  setup.py
pickapic/: __main__.py  authordescriptor.py  cliapi.py  context.py  dimension.py  fileutil.py  image.py  imagedescriptor.py  licensedescriptor.py  main.py  process.py  processedimage.py  profile.py  tag.py  utils.py
pickapic/driver/: flickr.py
pickapic/flickr/: apikey.py  cli.py  license.py  process.py  timestamp.py
pickapic/migrations/: 20221115002300_add_profile.py  20221115002300_create_profile.py  20221115003600_add_global_tag.py  20221115003700_add_global_stop_tag.py  20221115003900_add_tag.py  20221115003900_create_tag.py  20221115004200_add_stop_tag.py  20221118212100_create_dimension.py  20221118212100_create_min_dimension.py  20221119204200_create_flickr_api.py  20221125195200_create_flickr_license.py  20230914231000_create_flickr_min_timestamp.py  20230914234500_create_processed_image.py
