[tool.poetry]
name = "pickapic"
version = "0.1.0"
description = "A command line tool that downloads a random photo from a public image hosting."
authors = ["Andrey Nakin <andrey.nakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
caribou = "^0.3.0"
flickrapi = "^2.4.0"

[tool.poetry.scripts]
pickapic = "pickapic.main:pickapic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
